[gd_scene load_steps=19 format=2]

[ext_resource path="res://Trail.gd" type="Script" id=1]
[ext_resource path="res://Map.gd" type="Script" id=2]
[ext_resource path="res://Paddle.gd" type="Script" id=3]
[ext_resource path="res://Ball.gd" type="Script" id=4]
[ext_resource path="res://level1.tscn" type="PackedScene" id=5]
[ext_resource path="res://FPS.gd" type="Script" id=6]
[ext_resource path="res://assets/paddle/default.png" type="Texture" id=7]
[ext_resource path="res://assets/ball/default.png" type="Texture" id=8]
[ext_resource path="res://assets/light.png" type="Texture" id=9]
[ext_resource path="res://mobile_controls.tscn" type="PackedScene" id=10]

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=10]
offsets = PoolRealArray( 0, 0.266055 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 88 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 88 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 176, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 176, 10 )

[node name="Node2D" type="Node2D"]

[node name="TileMap" parent="." instance=ExtResource( 5 )]
tile_data = PoolIntArray( 0, 5, 0, 1, 5, 0, 2, 5, 0, 3, 5, 0, 4, 5, 0, 5, 5, 0, 6, 5, 0, 7, 5, 0, 8, 5, 0, 9, 5, 0, 10, 5, 0, 11, 5, 0, 12, 5, 0, 13, 5, 0, 14, 5, 0, 15, 5, 0, 16, 5, 0, 17, 5, 0, 18, 5, 0, 19, 5, 0, 65536, 5, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 5, 0, 65543, 5, 0, 65544, 5, 0, 65545, 1, 0, 65546, 2, 0, 65547, 5, 0, 65548, 5, 0, 65549, 5, 0, 65550, 5, 0, 65551, 5, 0, 65552, 5, 0, 65553, 5, 0, 65554, 5, 0, 65555, 5, 0, 131072, 5, 0, 131073, 5, 0, 131074, 5, 0, 131075, 5, 0, 131076, 5, 0, 131077, 5, 0, 131078, 5, 0, 131079, 5, 0, 131080, 1, 0, 131081, 6, 0, 131082, 6, 0, 131083, 2, 0, 131084, 5, 0, 131085, 5, 0, 131086, 5, 0, 131087, 5, 0, 131088, 5, 0, 131089, 5, 0, 131090, 5, 0, 131091, 5, 0, 196608, 5, 0, 196609, 0, 0, 196610, 5, 0, 196611, 5, 0, 196612, 0, 0, 196613, 5, 0, 196614, 5, 0, 196615, 1, 0, 196616, 6, 0, 196617, 9, 0, 196618, 9, 0, 196619, 6, 0, 196620, 2, 0, 196621, 5, 0, 196622, 5, 0, 196623, 0, 0, 196624, 5, 0, 196625, 5, 0, 196626, 0, 0, 196627, 5, 0, 262144, 5, 0, 262145, 5, 0, 262146, 5, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 1, 0, 262151, 6, 0, 262152, 6, 0, 262153, 6, 0, 262154, 6, 0, 262155, 6, 0, 262156, 6, 0, 262157, 2, 0, 262158, 5, 0, 262159, 5, 0, 262160, 5, 0, 262161, 5, 0, 262162, 5, 0, 262163, 5, 0, 327680, 5, 0, 327681, 5, 0, 327682, 5, 0, 327683, 5, 0, 327684, 5, 0, 327685, 1, 0, 327686, 6, 0, 327687, 6, 0, 327688, 6, 0, 327689, 6, 0, 327690, 6, 0, 327691, 6, 0, 327692, 6, 0, 327693, 6, 0, 327694, 2, 0, 327695, 5, 0, 327696, 5, 0, 327697, 5, 0, 327698, 5, 0, 327699, 5, 0, 393216, 5, 0, 393217, 5, 0, 393218, 5, 0, 393219, 5, 0, 393220, 1, 0, 393221, 6, 0, 393222, 9, 0, 393223, 6, 0, 393224, 9, 0, 393225, 6, 0, 393226, 6, 0, 393227, 9, 0, 393228, 6, 0, 393229, 9, 0, 393230, 6, 0, 393231, 2, 0, 393232, 5, 0, 393233, 5, 0, 393234, 5, 0, 393235, 5, 0, 458752, 5, 0, 458753, 5, 0, 458754, 5, 0, 458755, 1, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 6, 0, 458764, 6, 0, 458765, 6, 0, 458766, 6, 0, 458767, 6, 0, 458768, 2, 0, 458769, 5, 0, 458770, 5, 0, 458771, 5, 0, 524288, 5, 0, 524289, 5, 0, 524290, 5, 0, 524291, 5, 0, 524292, 5, 0, 524293, 5, 0, 524294, 5, 0, 524295, 5, 0, 524296, 5, 0, 524297, 5, 0, 524298, 5, 0, 524299, 5, 0, 524300, 5, 0, 524301, 5, 0, 524302, 5, 0, 524303, 5, 0, 524304, 5, 0, 524305, 5, 0, 524306, 5, 0, 524307, 5, 0, 589824, 5, 0, 589825, 5, 0, 589826, 5, 0, 589827, 5, 0, 589828, 5, 0, 589829, 5, 0, 589830, 5, 0, 589831, 5, 0, 589832, 5, 0, 589833, 5, 0, 589834, 5, 0, 589835, 5, 0, 589836, 5, 0, 589837, 5, 0, 589838, 5, 0, 589839, 5, 0, 589840, 5, 0, 589841, 5, 0, 589842, 5, 0, 589843, 5, 0, 655360, 5, 0, 655361, 5, 0, 655362, 5, 0, 655363, 5, 0, 655364, 5, 0, 655365, 5, 0, 655366, 5, 0, 655367, 5, 0, 655368, 5, 0, 655369, 5, 0, 655370, 5, 0, 655371, 5, 0, 655372, 5, 0, 655373, 5, 0, 655374, 5, 0, 655375, 5, 0, 655376, 5, 0, 655377, 5, 0, 655378, 5, 0, 655379, 5, 0, 720896, 5, 0, 720897, 5, 0, 720898, 5, 0, 720899, 5, 0, 720900, 5, 0, 720901, 5, 0, 720902, 5, 0, 720903, 5, 0, 720904, 5, 0, 720905, 5, 0, 720906, 5, 0, 720907, 5, 0, 720908, 5, 0, 720909, 5, 0, 720910, 5, 0, 720911, 5, 0, 720912, 5, 0, 720913, 5, 0, 720914, 5, 0, 720915, 5, 0 )
script = ExtResource( 2 )

[node name="Trail" type="Line2D" parent="."]
position = Vector2( 40, 168 )
points = PoolVector2Array( 0, -8 )
width = 7.0
width_curve = SubResource( 9 )
default_color = Color( 1, 1, 1, 1 )
gradient = SubResource( 10 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 1 )

[node name="Paddle" type="Area2D" parent="."]
position = Vector2( 160, 168 )
script = ExtResource( 3 )

[node name="Paddle" type="Sprite" parent="Paddle"]
texture = ExtResource( 7 )

[node name="PaddleShape" type="CollisionShape2D" parent="Paddle"]
shape = SubResource( 2 )

[node name="Ball" type="KinematicBody2D" parent="."]
position = Vector2( 160, 160 )
script = ExtResource( 4 )

[node name="Ball" type="Sprite" parent="Ball"]
texture = ExtResource( 8 )

[node name="BallShape" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="Ball"]
texture = ExtResource( 9 )
energy = 0.15
shadow_enabled = true
shadow_gradient_length = 0.5
shadow_filter_smooth = 0.5

[node name="BorderLeft" type="Area2D" parent="."]

[node name="BorderShape" type="CollisionShape2D" parent="BorderLeft"]
position = Vector2( -8, 88 )
shape = SubResource( 4 )

[node name="BorderRight" type="Area2D" parent="."]

[node name="BorderShape" type="CollisionShape2D" parent="BorderRight"]
position = Vector2( 328, 88 )
shape = SubResource( 5 )

[node name="BorderTop" type="Area2D" parent="."]

[node name="BorderShape" type="CollisionShape2D" parent="BorderTop"]
position = Vector2( 160, -11 )
shape = SubResource( 6 )

[node name="BorderBottom" type="Area2D" parent="."]

[node name="BorderShape" type="CollisionShape2D" parent="BorderBottom"]
position = Vector2( 160, 187 )
shape = SubResource( 7 )

[node name="FPS" type="Label" parent="."]
margin_left = 176.0
margin_right = 216.0
margin_bottom = 14.0
text = "FPS"
script = ExtResource( 6 )

[node name="Score" type="Label" parent="."]
margin_left = 16.0
margin_right = 57.0
margin_bottom = 14.0
text = "SCORE"

[node name="Speed" type="Label" parent="."]
margin_left = 240.0
margin_right = 304.0
margin_bottom = 14.0
text = "SPEED"

[node name="Lives" type="Label" parent="."]
margin_left = 96.0
margin_right = 136.0
margin_bottom = 14.0
text = "LIVES"

[node name="MobileControls" parent="." instance=ExtResource( 10 )]

[connection signal="body_entered" from="Paddle" to="Ball" method="_on_Paddle_body_entered"]
[connection signal="area_entered" from="BorderLeft" to="Paddle" method="_on_BorderLeft_area_entered"]
[connection signal="area_exited" from="BorderLeft" to="Paddle" method="_on_BorderLeft_area_exited"]
[connection signal="body_entered" from="BorderLeft" to="Ball" method="_on_BorderLeft_body_entered"]
[connection signal="area_entered" from="BorderRight" to="Paddle" method="_on_BorderRight_area_entered"]
[connection signal="area_exited" from="BorderRight" to="Paddle" method="_on_BorderRight_area_exited"]
[connection signal="body_entered" from="BorderRight" to="Ball" method="_on_BorderRight_body_entered"]
[connection signal="body_entered" from="BorderTop" to="Ball" method="_on_BorderTop_body_entered"]
[connection signal="body_entered" from="BorderBottom" to="Ball" method="_on_BorderBottom_body_entered"]
